#2840: Fix bug where scrollbar eclipses expand arrows (#2880)
* #2840: Fix bug where scrollbar eclipses expand arrows

* Fix right pane

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,3 +158,10 @@ body a {
 #copy-calendar-button {
   margin-left: 10px;
 }
+
+.main-sidebar, .main-sidebar::before {
+  width: 280px;
+}
+body:not(.sidebar-mini-md) .content-wrapper, body:not(.sidebar-mini-md) .main-footer, body:not(.sidebar-mini-md) .main-header {
+  margin-left: 280px;
+}
